testdata/baselines/reference/conformance/typeTagForMultipleVariableDeclarations.errors.txt
error TS5055: Cannot write file 'typeTagForMultipleVariableDeclarations.js' because it would overwrite input file.
  Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
typeTagForMultipleVariableDeclarations.js(3,1): error TS2454: Variable 'x' is used before being assigned.


!!! error TS5055: Cannot write file 'typeTagForMultipleVariableDeclarations.js' because it would overwrite input file.
!!! error TS5055:   Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
==== typeTagForMultipleVariableDeclarations.js (1 errors) ====
    /** @type {number} */
    var x,y,z;
    x
    ~
!!! error TS2454: Variable 'x' is used before being assigned.
    y
    z
    